Bug 169226 - Writer grid points sometimes appear outside of the designated area
Summary: Writer grid points sometimes appear outside of the designated area
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.1.1 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Tamás Zolnai
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Grid-Helplines
  Show dependency treegraph
 
Reported: 2025-11-03 12:08 UTC by Tamás Zolnai
Modified: 2025-11-12 10:21 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Screen recording of the behavior (852.93 KB, video/mp4)
2025-11-03 12:15 UTC, Tamás Zolnai
Details
Small dots outside of the drawing area (222.43 KB, image/png)
2025-11-05 11:08 UTC, Tamás Zolnai
Details
Dots outside of the drawing area - bottom of the page (51.15 KB, image/png)
2025-11-05 12:01 UTC, Tamás Zolnai
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Zolnai 2025-11-03 12:08:28 UTC
Description:
While testing the grid functionality in Writer, I noticed that the drawing of the grid is inconsistent.

As I see, by design, the grid is drawn within the printable area, I mean the area defined by margins. However, while zooming in and scrolling vertically, I see that some grid points appear outside of the margins inconsistently

Steps to Reproduce:
1. Open Writer
2. Display grid
   * View -> Grid and Helplines -> Display Grid
3. Change the number of subvisions to 10 for better visibility
   * Optional, Tools -> Options -> LibreOffice Writer -> Grid
4. Zoom into the document using 390% zoom level
5. Scroll the document left and right.

-> On the right side of the page, sometimes some extra grid points appear.

Actual Results:
Grid points in the margin area are inconsistently appearing.

Expected Results:
Rendering should be consistent. Don't display grid points outside of margins.


Reproducible: Sometimes


User Profile Reset: No

Additional Info:
Version information:
Version: 25.8.1.1 (X86_64) / LibreOffice Community
Build ID: 580(Build:1)
CPU threads: 4; OS: Linux 6.16; UI render: default; VCL: kf6 (cairo+xcb)
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Tamás Zolnai 2025-11-03 12:15:37 UTC
Created attachment 203699 [details]
Screen recording of the behavior

The video shows that sometimes some extra grid points appear outside of the grid area on the right side of the page.
Comment 2 Tamás Zolnai 2025-11-04 08:13:13 UTC
Another way to reproduce the problem is an extreme use case, when the page size is smaller than the grid resolution.
Steps to reproduce:
* Set the page width to 4 cm
* Set the grid horizontal resolution to 5 cm

-> Some grid points are drawn outside of the margin.
Comment 3 Commit Notification 2025-11-05 09:01:18 UTC
Tamás Zolnai committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e49b92a479dc88f02c4adeb9db732d9b5c11b9bc

tdf#169226: Avoid rendering grid points outside of the drawing area

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Mike Kaganski 2025-11-05 09:31:19 UTC
(In reply to Tamás Zolnai from comment #1)
> The video shows that sometimes some extra grid points appear outside of the
> grid area on the right side of the page.

But this video shows crop marks, as configured in Options->Writer->Fromatting Aids - or do I miss something?
Comment 5 Tamás Zolnai 2025-11-05 11:08:42 UTC
Created attachment 203744 [details]
Small dots outside of the drawing area
Comment 6 Tamás Zolnai 2025-11-05 11:10:05 UTC
(In reply to Mike Kaganski from comment #4)
> (In reply to Tamás Zolnai from comment #1)
> > The video shows that sometimes some extra grid points appear outside of the
> > grid area on the right side of the page.
> 
> But this video shows crop marks, as configured in
> Options->Writer->Fromatting Aids - or do I miss something?

No I'm not speaking about the crop mark, but the dots near the crop mark. The points are not always visible in the video. I attached a screenshot from the video, where you can see the small dots.
Comment 7 Tamás Zolnai 2025-11-05 11:12:03 UTC
The video shows both the correct rendering when those dots are not present and the incorrect rendering when they appear. This behavior is inconsistent.
Comment 8 Tamás Zolnai 2025-11-05 12:01:01 UTC
Created attachment 203747 [details]
Dots outside of the drawing area - bottom of the page

It's more visible at the bottom of the page. No need for that high level of zoom.