tdf#169226: Avoid rendering grid points outside of the drawing area

In Writer.

The drawing area might be very small. The code always drew the first
segment of the grid without considering that this segment might not
be fully visible.

Change-Id: I76d51393ae1f0219c25e890bd57ec00a7c51ed91
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193385
Tested-by: Jenkins
Reviewed-by: Tamás Zolnai <zolnaitamas2000@gmail.com>